end routes from controllers
